# ip-display-driver

./: DEVELOPMENT.md  HEADLESS.md  INPUT_HANDLING.md  README.md  SUMMARY.md  build.sh
client/: Cargo.toml  build.rs
client/resources/: app.css  resources.gresource.xml
client/src/: main.rs  network.rs  protocol.rs  renderer.rs  ui.rs
kernel/: Makefile  ipdisp.h  ipdisp_drm.c  ipdisp_encoder.c  ipdisp_main.c  ipdisp_network.c
