[package]
name = "ip-display-client"
version = "0.1.0"
edition = "2021"
description = "GTK4 client for IP Display Driver"
authors = ["IP Display Driver Project"]
license = "MIT"

[dependencies]
gtk4 = { version = "0.7", package = "gtk4" }
glib = "0.18"
gio = "0.18"
gdk4 = "0.7"
gdk-pixbuf = "0.18"
cairo-rs = "0.18"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
glib-build-tools = "0.18"

[[bin]]
name = "ip-display-client"
path = "src/main.rs"
